pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-254-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/254-list_items.md
---
 1. A paragraph with two lines.


    indented code
    

        A block quote.
