pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-263-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/263-list_items.md
---
 1. foo


    bar
    

    baz

        bam
